--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.9"
     },
+    "require": {
+        "illuminate/support": "^7.0|^8.0"
+    },
     "autoload": {
         "psr-4": {
             "Manusiakemos\\Admin\\": "./src"
