--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
         "barryvdh/laravel-ide-helper": "^2.9"
     },
     "require": {
-        "illuminate/support": "^7.0|^8.0",
-        "manusiakemos/admin" : "^1"
+        "illuminate/support": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
